# neural-search

./: CHANGELOG.md  build.gradle
formatter/: formatting.gradle
index/: sindi_index
jni/: CMakeLists.txt
jni/cmake/: macros.cmake
jni/include/: jni_util.h  org_opensearch_neuralsearch_jni_NativeVsagService.h
jni/src/: jni_util.cpp  org_opensearch_neuralsearch_jni_NativeVsagService.cpp
src/main/java/org/opensearch/neuralsearch/actionfilter/: SemanticFieldFilter.java
src/main/java/org/opensearch/neuralsearch/common/: MinClusterVersionUtil.java  SemanticFieldConstants.java
src/main/java/org/opensearch/neuralsearch/constants/: SemanticInfoFieldConstants.java
src/main/java/org/opensearch/neuralsearch/jni/: NativeVsagService.java  VsagDataset.java  VsagSearchResult.java  VsagSparseDataset.java  VsagSparseVector.java
src/main/java/org/opensearch/neuralsearch/mapper/: SemanticFieldMapper.java  SemanticInfoGenerationMode.java  SemanticTextFieldMapper.java
src/main/java/org/opensearch/neuralsearch/mappingtransformer/: SemanticInfoConfigBuilder.java  SemanticMappingTransformer.java  SemanticMappingUtils.java
src/main/java/org/opensearch/neuralsearch/ml/: MLCommonsClientAccessor.java
src/main/java/org/opensearch/neuralsearch/plugin/: NeuralSearch.java
src/main/java/org/opensearch/neuralsearch/processor/dto/: SemanticFieldInfo.java
src/main/java/org/opensearch/neuralsearch/query/: NeuralQueryBuilder.java  NeuralSparseQueryBuilder.java
src/main/java/org/opensearch/neuralsearch/query/parser/: NeuralQueryParser.java
src/main/java/org/opensearch/neuralsearch/util/: FeatureFlagUtil.java  NeuralQueryValidationUtil.java  ProcessorDocumentUtils.java  SemanticMappingUtils.java
src/test/java/org/opensearch/neuralsearch/jni/: NativeVsagServiceTests.java
src/test/java/org/opensearch/neuralsearch/mappingtransformer/: SemanticMappingTransformerTests.java  SemanticMappingUtilsTests.java
src/test/java/org/opensearch/neuralsearch/ml/: MLCommonsClientAccessorTests.java
src/test/java/org/opensearch/neuralsearch/plugin/: NeuralSearchTests.java
src/test/java/org/opensearch/neuralsearch/processor/: NeuralSparseTwoPhaseProcessorIT.java  SparseEncodingProcessorTests.java  TextEmbeddingProcessorTests.java
src/test/java/org/opensearch/neuralsearch/query/: HybridQueryBuilderTests.java  NeuralQueryBuilderRewriteTests.java  NeuralQueryBuilderTests.java
src/test/java/org/opensearch/neuralsearch/util/: SemanticMappingUtilsTests.java
src/test/resources/mapper/: transformedMappingMultipleSemanticFields.json
src/testFixtures/java/org/opensearch/neuralsearch/: BaseNeuralSearchIT.java  OpenSearchSecureRestTestCase.java
(+8 files in other folders)
